CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(ssd)

OPTION(BUILD_TESTS "Build library tests" OFF)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src ssd_SOURCES)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${ssd_SOURCES})
INSTALL(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)

IF(BUILD_TESTS)
	ADD_SUBDIRECTORY(compile_test)
ENDIF()

INCLUDE(CPack)
