CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(ssd)

OPTION(BUILD_TESTS "Build library tests" OFF)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE_DIRECTORIES(include)
INSTALL(DIRECTORY include DESTINATION . COMPONENT dev)

SET(DOC_FILES LICENSE)
INSTALL(FILES "${DOC_FILES}" DESTINATION share/doc/${PROJECT_NAME} COMPONENT dev)

IF(BUILD_TESTS)
	ADD_SUBDIRECTORY(compile_test)
ENDIF()

SET(CPACK_GENERATOR DEB)
SET(CPACK_SOURCE_GENERATOR TGZ)
SET(CPACK_SOURCE_IGNORE_FILES "${CMAKE_BINARY_DIR}/*;/\\\\.git/;/\\\\..*")

SET(CPACK_PACKAGE_CONTACT Ahbong)
INCLUDE(CPack)
